# django_snacks

./: db.sqlite3  pyproject.toml
snacks/: urls.py  views.py
snacks_project/: settings.py  urls.py
templates/: snacks-about.html  snacks-home.html  snacks-template.html
