[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["Momayaz <momayaz.dr.1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.5"

[tool.poetry.dev-dependencies]
blank = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
